Name:                yawn
Version:             0.1
Synopsis:            A quick, dirty and readable webserver implemented in Haskell
Homepage:            http://github.com/ameingast/yawn
License:             BSD3
License-file:        LICENSE
Author:              Andreas Meingast
Maintainer:          ameingast@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable yawn 
    Main-is:        Main.hs
    ghc-options:    -Wall -fno-warn-unused-do-bind
    Build-Depends:  network
    Build-Depends:  parsec
    Build-Depends:  base >= 4 
    Build-Depends:  haskell98

