Name:                yawn
Version:             0.1
Synopsis:            A quick, dirty and readable webserver implemented in Haskell
Homepage:            http://github.com/ameingast/yawn
License:             BSD3
License-file:        LICENSE
Author:              Andreas Meingast
Maintainer:          ameingast@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable yawn 
    Main-is:        Main.hs
    ghc-options:    -Wall -fno-warn-unused-do-bind -O3
    Build-Depends:  network >= 2.3
    Build-Depends:  containers >= 0.4
    Build-Depends:  parsec >= 3
    Build-Depends:  binary >= 0.5
    Build-Depends:  bytestring >= 0.9
    Build-Depends:  filepath >= 1.2
    Build-Depends:  attoparsec > 0.8
    Build-Depends:  directory >= 1.1
    Build-Depends:  url >= 2
    Build-Depends:  base >= 4 
    Build-Depends:  haskell98

